--- a/museum74/css/main.css
+++ b/museum74/css/main.css
@@ -142,6 +142,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 70vh;
 }
 
 #galery img:hover {
@@ -165,4 +166,19 @@ footer {
 
 .popover-header {
   color: #333333;
+}
+
+#kucherenko {
+  position: relative;
+  cursor: pointer;
+}
+
+#kucherenko:hover .floating {
+  display: block;
+}
+
+.floating {
+  position: absolute;
+  display: none;
+  right: -100px;
 }
